--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="header">
-    <img src="#" alt="./planeta.svg">
+    <img src="./IMG/Hello.svg" alt="">
     <div class="nav">
         <a href="">home</a>
         <a href="">sobre</a>
@@ -25,18 +25,18 @@
   <div class="main">
     <div class="lado-esquerdo">
         <div class="content">
-           <p>“Hello World!” Vamos aprender na prática</p>
+           <p class="hello">“Hello World!” Vamos aprender na prática</p>
            <h1>Será que é facil fazer o HTML e CSS sem o FIGMA?</h1>
-           <h1>Vamos testar isso agora, bora lá!</h1>
+           <p class=" vm">Vamos testar isso agora, bora lá!</p>
         </div>
-        <div class="btn">
-            <a href="Vamos começar!"></a>
-            <a href="30 minutos;"></a>
+        <div class="btns">
+            <a class="v1"href="stylesheet">Vamos começar!</a>
+            <a class="v2"href="stylesheet">30 minutos ;)</a>
         </div>
-        <div class="lado-direito">
-            <img src="./IMG/Planeta.svg" alt=" acessibilidade">
-        </div>
-    </div>
+      </div>
+      <div class="lado-direito">
+          <img src="./IMG/Planeta.svg" alt=" acessibilidade">
+      </div>
   </div>
 
 </body>
